tests/ui/type-alias-impl-trait/higher_kinded_params3.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/higher_kinded_params3.rs:25:33
   |
LL |     fn successors(&self, mut f: for<'x> fn(&'x ()) -> <&'x A as B>::C) -> Successors<'_> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ argument `'x` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/higher_kinded_params3.rs:18:17
   |
LL | type Tait<'a> = impl std::fmt::Debug + 'a;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/higher_kinded_params3.rs:27:9
   |
LL | type Tait<'a> = impl std::fmt::Debug + 'a;
   |                 ------------------------- the expected opaque type
...
LL |         f = g;
   |         ^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'x> fn(&'x ()) -> Tait<'x>`
              found fn pointer `for<'a> fn(&'a ()) -> &'a ()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0792.
For more information about an error, try `rustc --explain E0308`.
